--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           <li><a href="#service">service</a></li>
           <li><a href="#portofolio">portofolio</a></li>
           <li><a href="#contact">contact</a></li>
+          <li><a href="#contact">contact</a></li>
+          <li><a href="#contact">contact</a></li>
         </ul>
         <div class="hire">
           <button id="hire">hire me</button>
